bk_ida/gccida/g1/emit_push_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_push_insn/src/expr.c:3718:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_push_insn/src/expr.c:3736:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_push_insn/src/expr.c:3744:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v29; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_push_insn/src/expr.c:3753:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v38; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_push_insn/src/expr.c:3754:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code v39; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_push_insn/src/expr.c:3800:31: error: use of undeclared identifier 'machine_mode'
v25 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), args_addr, args_so_far); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_push_insn/src/expr.c:3844:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)size + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_push_insn/src/expr.c:3895:11: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
operand = insn_data_0[v39].operand; 
          ^~~~~~~~~~~
          insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_push_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_push_insn/src/expr.c:3909:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v37 = insn_data_0[v39].genfun( v30, froma); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_push_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_push_insn/src/expr.c:3909:30: error: called object type '<dependent type>' is not a function or function pointer
v37 = insn_data_0[v39].genfun( v30, froma); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_push_insn/src/expr.c:3933:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( sizetype_tab[0]->block.abstract_origin) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_push_insn/src/expr.c:3955:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[*( ( unsigned __int8 *)xinner + 2)] != MODE_INT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_push_insn/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_push_insn/src/expr.c:3968:18: error: invalid suffix 'xmode' on integer constant
v21 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_push_insn/src/expr.c:3969:31: error: invalid suffix 'orce' on integer constant
v22 = operand_sub*(short *)0xforce( xinner, v18, mode); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_push_insn/src/expr.c:3969:7: error: use of undeclared identifier 'operand_sub'
v22 = operand_sub*(short *)0xforce( xinner, v18, mode); 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_push_insn/src/expr.c:4004:31: error: use of undeclared identifier 'machine_mode'
v45 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), args_addr, args_so_far); 
                              ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_push_insn/src/obj/expr.o] Error 1
